fix overflow issue and remove css-variables

--- a/src/index.module.css
+++ b/src/index.module.css
@@ -1,10 +1,14 @@
 :host {
   display: contents;
+  overflow: auto;
 }
 
 .root {
+  all: inherit;
   display: block;
   contain: paint;
+  background-color: var(--background-color);
+  caret-color: var(--foreground-color);
 }
 
 .editor,
@@ -17,23 +21,12 @@
 .editor {
   display: block;
   position: relative;
-
-  background-color: var(--background-color);
-  caret-color: var(--foreground-color);
-
-  padding: var(--padding);
-  padding-top: var(--padding-top, var(--padding));
-  padding-right: var(--padding-right, var(--padding));
-  padding-bottom: var(--padding-bottom, var(--padding));
-  padding-left: var(--padding-left, var(--padding));
-
-  font-size: inherit;
 }
 
 .container {
   position: relative;
   flex: 1;
-  & code:not(.character) {
+  & code {
     display: block;
     position: relative;
     z-index: 1;
